# trackerh

./: .gitignore  Main.hs  MainMonadic.hs  TODO.org  Test.hs  TrackerTypes.hs  test.sh  trackerh.cabal
Tracker/: Api.hs  ApiM.hs  Config.hs  Context.hs  Filter.hs  Pickle.hs  Search.hs  Types.hs  Xml.hs
