Name: trackerh
Version: 0.0.1
Cabal-Version: >= 1.6
Build-type: Simple

Library
  Build-Depends: base
               , curl
               , HaXml < 1.19
               , hxt
               , network
               , mtl
  Exposed-Modules: Tracker.Api, Tracker.ApiM
  GHC-Options: -O2 -Wall -threaded -Werror -fno-warn-orphans -fforce-recomp

Executable trackerh
  Main-Is: Main.hs
  Build-Depends: base
               , ConfigFile
               , MissingH
               , directory
  Other-Modules: Tracker.Api
  GHC-Options: -O2 -Wall -threaded -Werror -fno-warn-orphans  -fforce-recomp

Executable trackerh-test
  Main-Is: Test.hs
  Build-Depends: base
               , test-framework
               , test-framework-quickcheck
               , test-framework-hunit
               , HUnit
               , QuickCheck < 2.0
  Other-Modules: Tracker.Api
  GHC-Options: -O2 -threaded 
