Name: trackerh
Version: 0.0.1
Cabal-Version: >= 1.6
Build-type: Simple

Library
  Build-Depends: base
               , curl
               , HaXml < 1.19
               , hxt
               , network
               , mtl
  Exposed-Modules: Tracker.ApiM
  GHC-Options: -O2 -Wall -threaded -Werror -fno-warn-orphans -fforce-recomp

Executable trackerhM
  Main-Is: MainMonadic.hs
  Build-Depends: base
               , ConfigFile
               , MissingH
               , directory
  Other-Modules: Tracker.ApiM
  GHC-Options: -O2 -Wall -threaded -Werror -fno-warn-orphans  -fforce-recomp

Executable trackerh-test
  Main-Is: Test.hs
  Build-Depends: base
               , test-framework
               , test-framework-quickcheck
               , test-framework-hunit
               , HUnit
               , QuickCheck < 2.0
  GHC-Options: -O2 -threaded 
